--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <body>
 
   <header>
-    <img src="ecom-logo.png" alt="ECOM Logo"> <!-- Replace with your actual logo filename -->
+    <img src="ecom-logo.png" alt="ECOM Logo"> 
     <h1>ECOM</h1>
   </header>
 
