--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ECOM Project</title>
   <style>
     :root {
@@ -21,6 +21,7 @@
       --btn-color: var(--btn-light);
       --btn-hover: var(--btn-hover-light);
       --text-color: var(--text-light);
+      --btn-text: #ffffff;
       --logo-src: url('ecom-light.png');
     }
 
@@ -29,17 +30,27 @@
       --btn-color: var(--btn-dark);
       --btn-hover: var(--btn-hover-dark);
       --text-color: var(--text-dark);
+      --btn-text: #222222;
       --logo-src: url('ecom-dark.png');
     }
 
-    body {
+    * {
+      box-sizing: border-box;
+    }
+
+    html, body {
       margin: 0;
       padding: 0;
-      text-align: center;
       background-color: var(--bg-color);
       color: var(--text-color);
       font-family: Arial, sans-serif;
-      transition: background 0.3s, color 0.3s;
+      height: 100%;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     header {
@@ -47,8 +58,6 @@
     }
 
     header .logo {
-      width: 100px;
-      height: auto;
       background-image: var(--logo-src);
       background-size: contain;
       background-repeat: no-repeat;
@@ -61,12 +70,10 @@
     .theme-toggle {
       margin-top: 10px;
       background: none;
-      border: 1px solid var(--text-color);
-      color: var(--text-color);
-      padding: 6px 12px;
-      border-radius: 6px;
+      border: none;
+      font-size: 1.6em;
       cursor: pointer;
-      font-size: 0.9em;
+      color: var(--text-color);
     }
 
     .link-container {
@@ -81,7 +88,7 @@
       width: 200px;
       height: 200px;
       background-color: var(--btn-color);
-      color: #fff;
+      color: var(--btn-text);
       font-size: 1.2em;
       display: flex;
       justify-content: center;
@@ -90,6 +97,8 @@
       border-radius: 12px;
       transition: all 0.3s ease;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      padding: 10px;
     }
 
     .link-box:hover {
@@ -98,9 +107,11 @@
     }
 
     footer {
+      margin-top: auto;
       padding: 40px 20px;
       background-color: transparent;
       border-top: 1px solid #ccc;
+      text-align: center;
     }
 
     footer h2 {
@@ -113,12 +124,6 @@
       font-size: 0.95em;
     }
 
-    footer .hashtags {
-      margin-top: 12px;
-      font-size: 0.9em;
-      color: var(--text-color);
-    }
-
     .github-links a {
       color: var(--btn-color);
       text-decoration: none;
@@ -128,6 +133,11 @@
     .github-links a:hover {
       text-decoration: underline;
       color: var(--btn-hover);
+    }
+
+    .hashtags {
+      margin-top: 12px;
+      font-size: 0.9em;
     }
 
     @media (max-width: 700px) {
@@ -142,13 +152,17 @@
 
   <header>
     <div class="logo"></div>
-    <button class="theme-toggle" onclick="toggleTheme()">Toggle theme</button>
+    <button class="theme-toggle" onclick="toggleTheme()" title="Toggle theme">
+      🌙
+    </button>
   </header>
 
-  <div class="link-container">
-    <a href="https://proxmox-kyllian.com/app/login" class="link-box" target="_blank">Application</a>
-    <a href="https://github.com/ThomasM2568/M1_IoT" class="link-box" target="_blank">GitHub (private)</a>
-  </div>
+  <main>
+    <div class="link-container">
+      <a href="https://proxmox-kyllian.com/app/login" class="link-box" target="_blank">Application</a>
+      <a href="https://github.com/ThomasM2568/M1_IoT" class="link-box" target="_blank">GitHub (private)</a>
+    </div>
+  </main>
 
   <footer>
     <h2>ECOM</h2>
@@ -168,7 +182,9 @@
     function toggleTheme() {
       const html = document.documentElement;
       const current = html.getAttribute('data-theme');
-      html.setAttribute('data-theme', current === 'light' ? 'dark' : 'light');
+      const newTheme = current === 'light' ? 'dark' : 'light';
+      html.setAttribute('data-theme', newTheme);
+      document.querySelector('.theme-toggle').textContent = newTheme === 'light' ? '🌙' : '🌞';
     }
   </script>
 
