--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ECOM Project</title>
+  <title>ECOM</title>
+  <link rel="icon" href="ecom.ico" type="image/x-icon">
   <style>
     :root {
       --bg-light: #f4f7f6;
