--- a/index.html
+++ b/index.html
@@ -158,12 +158,13 @@
     </button>
   </header>
 
-  <main>
-    <div class="link-container">
-      <a href="https://proxmox-kyllian.com/app/login" class="link-box" target="_blank">Application</a>
-      <a href="https://github.com/ThomasM2568/M1_IoT" class="link-box" target="_blank">GitHub (private)</a>
-    </div>
-  </main>
+ <main>
+  <div class="link-container">
+    <a href="https://proxmox-kyllian.com/app/login" class="link-box" target="_blank">Application</a>
+    <a href="https://github.com/ThomasM2568/M1_IoT" class="link-box" target="_blank">GitHub (private)</a>
+    <a href="https://www.canva.com/design/DAGqyllfzyc/TxSFiH-BlN17BrZeq_S_NA/view?utm_content=DAGqyllfzyc&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h24a3b27880" class="link-box" target="_blank">Additional materials</a>
+  </div>
+</main>
 
   <footer>
     <h2>ECOM</h2>
